src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_short_without_context.snap
---
source: src/agent/cli/product/tui_app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                              "
"› Test                        "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"  gpt-5.4   Identity planner  "
