src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_interrupt.snap
---
source: src/agent/cli/product/tui_app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"› Ask LHA to do anything                                                                            "
"                                                                                                    "
"  ctrl + c again to quit                                                                            "
